--- a/frontend/partials/login.html
+++ b/frontend/partials/login.html
@@ -1,5 +1,35 @@
 <script type="text/template">
-<table class='table'>
+<form id="frm-login" class="form-horizontal col-md-offset-4 col-md-4" method="post" action="#">
+	
+	<div class="form-group">
+		<label for="email" class="cols-sm-2 control-label">Your Email</label>
+		<div class="cols-sm-10">
+			<div class="input-group">
+				<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+				<input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+			</div>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label for="password" class="cols-sm-2 control-label">Password</label>
+		<div class="cols-sm-10">
+			<div class="input-group">
+				<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+				<input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
+			</div>
+		</div>
+	</div>
+
+	<div class="form-group ">
+		<button id='btn-login' type="button" class="btn btn-primary btn-lg btn-block login-button">Login</button>
+	</div>
+	<div class="login-register">
+		<a href="register">Register</a>
+	 </div>
+</form>	
+	
+<!--table class='table'>
     <tr>
 		<td>Name</td>
         <td>Email</td>
@@ -12,5 +42,5 @@
             </tr>
         <% }); %>
     </tbody>
-</table>
+</table-->
 </script>
