--- a/frontend/partials/login.html
+++ b/frontend/partials/login.html
@@ -2,7 +2,7 @@
 <form id="frm-login" class="form-horizontal col-md-offset-4 col-md-4" method="post" action="#">
 	
 	<div class="form-group">
-		<label for="email" class="cols-sm-2 control-label">Your Email</label>
+		<label for="email" class="cols-sm-2 control-label">Email</label>
 		<div class="cols-sm-10">
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
