--- a/frontend/partials/navbar.html
+++ b/frontend/partials/navbar.html
@@ -8,7 +8,7 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	  </button>
-	  <a class="navbar-brand" href="/"><i class="fa fa-lg fa-home"></i> Experimental</a></div>
+	  <a class="navbar-brand" href="/"><i class="fa fa-lg fa-home"></i> Experimental v<%= app.version %></a></div>
 	<div id="navbar" class="navbar-collapse collapse ">
 	  <ul class="nav navbar-nav">
 		<li class='dropdown'>
@@ -65,4 +65,5 @@
 	</div>
   </div>
 </nav>
+<h2 class="col-md-offset-4 col-md-4 well  text-center border" style="margin-top:-12px;"><i class='fa fa-user'></i> <span id="spn-title"></span></h2>
 </script>
