--- a/frontend/partials/register.html
+++ b/frontend/partials/register.html
@@ -1,12 +1,11 @@
 <script type="text/template">
-<form class="form-horizontal" method="post" action="#">
-	
+<form id='frm-register' class="form-horizontal col-md-offset-4 col-md-4" onsubmit="return false;">
 	<div class="form-group">
 		<label for="name" class="cols-sm-2 control-label">Your Name</label>
 		<div class="cols-sm-10">
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-				<input type="text" class="form-control" name="name" id="name"  placeholder="Enter your Name"/>
+				<input type="text" class="form-control" name="name" id="name"  placeholder="Enter your Name" required/>
 			</div>
 		</div>
 	</div>
@@ -16,27 +15,29 @@
 		<div class="cols-sm-10">
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-				<input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+				<input type="email" class="form-control" name="email" id="email"  placeholder="Enter your Email" required/>
 			</div>
 		</div>
 	</div>
 
+<!--
 	<div class="form-group">
 		<label for="username" class="cols-sm-2 control-label">Username</label>
 		<div class="cols-sm-10">
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-				<input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username"/>
+				<input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username" required/>
 			</div>
 		</div>
 	</div>
+-->
 
 	<div class="form-group">
 		<label for="password" class="cols-sm-2 control-label">Password</label>
 		<div class="cols-sm-10">
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-				<input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
+				<input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password" required/>
 			</div>
 		</div>
 	</div>
@@ -46,16 +47,16 @@
 		<div class="cols-sm-10">
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-				<input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password"/>
+				<input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password" required/>
 			</div>
 		</div>
 	</div>
 
 	<div class="form-group ">
-		<button type="button" class="btn btn-primary btn-lg btn-block login-button">Register</button>
+		<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Register</button>
 	</div>
-		<div class="login-register">
-			<a href="index.php">Login</a>
-		 </div>
+	<div class="login-register">
+		<a href="/#login">Login</a>
+	 </div>
 </form>	
 </script>
