--- a/frontend/partials/navbar.html
+++ b/frontend/partials/navbar.html
@@ -8,7 +8,7 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	  </button>
-	  <a class="navbar-brand" href="/"><i class="fa fa-lg fa-home"></i> Experimental v<%= app.version %></a></div>
+	  <a class="navbar-brand" href="#"><i class="fa fa-lg fa-home"></i> Experimental v<%= app.version %></a></div>
 	<div id="navbar" class="navbar-collapse collapse ">
 	  <ul class="nav navbar-nav">
 		<li class='dropdown'>
