--- a/frontend/partials/register.html
+++ b/frontend/partials/register.html
@@ -1,7 +1,7 @@
 <script type="text/template">
 <form id='frm-register' class="form-horizontal col-md-offset-4 col-md-4" onsubmit="return false;">
 	<div class="form-group">
-		<label for="name" class="cols-sm-2 control-label">Your Name</label>
+		<label for="name" class="cols-sm-2 control-label">Name</label>
 		<div class="cols-sm-10">
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
@@ -11,7 +11,7 @@
 	</div>
 
 	<div class="form-group">
-		<label for="email" class="cols-sm-2 control-label">Your Email</label>
+		<label for="email" class="cols-sm-2 control-label">Email</label>
 		<div class="cols-sm-10">
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
@@ -19,18 +19,6 @@
 			</div>
 		</div>
 	</div>
-
-<!--
-	<div class="form-group">
-		<label for="username" class="cols-sm-2 control-label">Username</label>
-		<div class="cols-sm-10">
-			<div class="input-group">
-				<span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-				<input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username" required/>
-			</div>
-		</div>
-	</div>
--->
 
 	<div class="form-group">
 		<label for="password" class="cols-sm-2 control-label">Password</label>
