--- a/frontend/partials/navbar.html
+++ b/frontend/partials/navbar.html
@@ -1,5 +1,5 @@
 <script type="text/template">
-<nav class="navbar navbar-inverse " role='navigation'>
+<nav class="navbar navbar-inverse" role='navigation'>
   <div class="container">
 	<div class="navbar-header">
 	  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -10,7 +10,7 @@
 	  </button>
 	  <a class="navbar-brand" href="#"><i class="fa fa-lg fa-home"></i> Experimental v<%= app.version %></a></div>
 	<div id="navbar" class="navbar-collapse collapse ">
-	  <ul class="nav navbar-nav">
+	  <ul id='navbar-main-block' class="nav navbar-nav">
 		<li class='dropdown'>
 			<a href="#" class='data-toggle' data-toggle='dropdown'>Lorem <span class="caret"></span></a>
 			<ul class='dropdown-menu'>
@@ -31,7 +31,7 @@
 			</ul>
 		</li>
 	  </ul>
-	<ul class="nav navbar-nav navbar-right ">
+	<ul id='navbar-user-block' class="nav navbar-nav navbar-right hidden">
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 				<i class="fa fa-user">&nbsp;</i>John Doe<span class="caret"></span>
@@ -65,5 +65,6 @@
 	</div>
   </div>
 </nav>
-<h2 class="col-md-offset-4 col-md-4 well  text-center border" style="margin-top:-12px;"><i class='fa fa-user'></i> <span id="spn-title"></span></h2>
+<h2 class="col-md-offset-4 col-md-4 well text-center" style="margin-top:-12px;"><i class='fa fa-user'></i> <span id="spn-title"></span></h2>
+<div class='col-md-offset-3 col-md-6' id='nav-alert-block' style='clear:both'></div>
 </script>
