--- a/frontend/partials/register.html
+++ b/frontend/partials/register.html
@@ -29,6 +29,24 @@
 			</div>
 		</div>
 	</div>
+	<div class="form-group">
+		<label for="password" class="cols-sm-2 control-label">Password</label>
+		<div class="cols-sm-10">
+			<div class="input-group">
+				<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+				<input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password" required/>
+			</div>
+		</div>
+	</div>
+	<div class="form-group">
+		<label for="password" class="cols-sm-2 control-label">Password</label>
+		<div class="cols-sm-10">
+			<div class="input-group">
+				<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+				<input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password" required/>
+			</div>
+		</div>
+	</div>
 
 	<div class="form-group">
 		<label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
@@ -41,7 +59,7 @@
 	</div>
 
 	<div class="form-group ">
-		<button type="submit" class="btn btn-primary btn-lg btn-block login-button">Register</button>
+		<button type="submit" class="btn btn-success btn-lg btn-block login-button">Register</button>
 	</div>
 	<div class="login-register">
 		<a href="/#login">Login</a>
