added test routes

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -2,6 +2,14 @@ body {
 	font-family: verdana;
 }
 
+pre {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap; 
+    white-space: -o-pre-wrap;
+    word-wrap: break-word; 
+}
+
 .dropdown-menu > li >  a.focus,
 .dropdown-menu > li > a:hover
 {
