--- a/partials/register.html
+++ b/partials/register.html
@@ -64,7 +64,7 @@
 		<button type="submit" class="btn btn-success btn-lg btn-block login-button">Register</button>
 	</div>
 	<div class="login-register">
-		<a href="/#login">Login</a>
+		<a href="#login">Login</a>
 	 </div>
 </form>	
 </script>
