--- a/frontend/partials/login.html
+++ b/frontend/partials/login.html
@@ -24,7 +24,7 @@
 		<button id='btn-login' type="submit" class="btn btn-primary btn-lg btn-block login-button">Login</button>
 	</div>
 	<div class="login-register">
-		<a href="/#register">Register</a>
+		<a href="#register">Register</a>
 	 </div>
 </form>	
 	
