fixed initial loading

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -67,7 +67,7 @@
 	</div>
   </div>
 </nav>
-<h2 class="col-md-offset-4 col-md-4 well text-center" style="margin-top:-12px;"><i id='icon-title' class='fa fa-bug'></i> <span id="spn-title"></span></h2>
+<h2 class="col-md-offset-4 col-md-4 well text-center" style="margin-top:-12px;"><i id='icon-title' class='fa'></i> <span id="spn-title"></span></h2>
 <div class='col-md-offset-3 col-md-6' id='nav-alert-block' style='clear:both'>
 </div>
 </script>
