--- a/frontend/partials/about.html
+++ b/frontend/partials/about.html
@@ -1,7 +1,7 @@
 <script type="text/template">
 <div id='div-info' class="col-md-offset-3 col-md-6">
 <pre>
-Experimental is a full stack, single-page starter app built using following technologies:
+XYZ is a full stack, single-page starter app built using following technologies:
 
     Front-end
         Backbone.js
