--- a/frontend/partials/navbar.html
+++ b/frontend/partials/navbar.html
@@ -8,7 +8,7 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	  </button>
-	  <a class="navbar-brand" href="#"><i class="fa fa-lg fa-home"></i> Experimental v<%= app.version %></a></div>
+	  <a class="navbar-brand" href="#"><i class="fa fa-lg fa-home"></i> <%=  app.config.name + " v" + app.version %></a></div>
 	<div id="navbar" class="navbar-collapse collapse ">
 	  <ul id='navbar-main-block' class="nav navbar-nav <% if (app.state.user === null){%> hidden <%} %>">
 		<li class='dropdown'>
@@ -27,7 +27,7 @@
 				<li><a href="#consectetur"><i class="fa fa-lg fa-folder-open">&nbsp;</i>Consectetur</a></li>
 				<li><a href="#adipiscing"><i class="fa fa-lg fa-paper-plane">&nbsp;</i>Adipiscing</a></li>
 				<li class="divider"></li>
-				<li><a href="#about"><i class="fa fa-lg fa-info-circle">&nbsp;</i>About Experimental</a></li>
+				<li><a href="#about"><i class="fa fa-lg fa-info-circle">&nbsp;</i>About <%= app.config.name %></a></li>
 			</ul>
 		</li>
 	  </ul>
@@ -67,7 +67,7 @@
 	</div>
   </div>
 </nav>
-<h2 class="col-md-offset-4 col-md-4 well text-center" style="margin-top:-12px;"><i id='icon-title' class='fa'></i> <span id="spn-title"></span></h2>
+<h2 class="col-md-offset-4 col-md-4 well text-center" style="margin-top:-12px;"><i id='icon-title' class='fa fa-spinner fa-spin'></i> <span id="spn-title">Loading</span></h2>
 <div class='col-md-offset-3 col-md-6' id='nav-alert-block' style='clear:both'>
 </div>
 </script>
