renamed util.js to helper.js, used deffered to handle navbarView update

--- a/frontend/partials/navbar.html
+++ b/frontend/partials/navbar.html
@@ -24,7 +24,7 @@
 		<li class='dropdown'>
 			<a href="#" class='data-toggle' data-toggle='dropdown'>Settings <span class="caret"></span></a>
 			<ul class='dropdown-menu'>
-				<li><a href="#consectetur"><i class="fa fa-lg fa-folder-open">&nbsp;</i>Consectetur</a></li>
+				<li><a href="#longrunning"><i class="fa fa-lg fa-folder-open">&nbsp;</i>Long Running Page</a></li>
 				<li><a href="#adipiscing"><i class="fa fa-lg fa-paper-plane">&nbsp;</i>Adipiscing</a></li>
 				<li class="divider"></li>
 				<li><a href="#about"><i class="fa fa-lg fa-info-circle">&nbsp;</i>About <%= app.config.name %></a></li>
