created helper and database objects

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -13,7 +13,7 @@ pre {
 .dropdown-menu > li >  a.focus,
 .dropdown-menu > li > a:hover
 {
-	background-color: royalblue; /*#90cfe7;*/
+	background-color: darkorange; /*#90cfe7;*/
 }
 
 .btn {
